# python_complete

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml
.hypothesis/constants/: b15906825a91f300  da39a3ee5e6b4b0d
data/: entrenamiento.csv  knowledge_base.json
src/lab_1/: main.py
src/lab_10/: concurrency.py  tasks.py
src/lab_11/: interfaces.py
src/lab_2/: datos.json  main.py
src/lab_3/: main.py
src/lab_4/: main.py  modelos.py
src/lab_5/: main.py
src/lab_6/: main.py
src/lab_7/: alembic.ini  database.py  main.py  models.py  mongo_lab.py
src/lab_7/migrations/: env.py
src/lab_7/migrations/versions/: 17b354793e5a_seguimiento_inicial.py  c92ee9ddb5e6_add_address_to_user.py
src/lab_8/: alembic.ini  auth.py  database.py  dependencies.py  main.py  middleware.py  models.py  schemas.py
src/lab_8/migrations/: env.py
src/lab_8/migrations/versions/: 4bd5e3bb47a3_añadir_cantidad_a_items_de_orden.py  521438489058_eliminar_items_en_cascada_y_estatus_en_.py  59b795bacaf1_initial_retail_schema.py
src/lab_8/routers/: auth.py  orders.py
src/lab_8/test/: conftest.py  test_auth.py  test_orders.py
src/lab_9/: discounts.py
src/lab_9/test/: test_discounts.py
