[project]
name = "python-complete"
version = "0.1.0"
description = ""
authors = [
    {name = "Arturo Humanez"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.18.1,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "bcrypt (==3.2.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "hypothesis (>=6.150.2,<7.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"] # Errores, Flakes e Isort (orden de imports)
fix = true

[tool.ruff.format]
quote-style = "double"